# database

./: .gitignore  README.md
database-model/: Cargo.toml
database-model/src/: available_zone.rs  cluster.rs  dictionary.rs  dictionary_value.rs  file_metadata.rs  file_storage.rs  file_system.rs  file_transmit.rs  flow_draft.rs  flow_instance.rs  flow_instance_billing.rs  flow_template.rs  installed_software.rs  lib.rs  local_software_source.rs  node_draft_file.rs  node_instance.rs  node_instance_billing.rs  notification.rs  org.rs  prelude.rs  project.rs  project_user.rs  provider.rs  provider_list.rs  provider_users.rs  queue.rs  queue_bill_config.rs  region.rs  software_block_list.rs  software_install_history.rs  software_source.rs  storage_server.rs  task.rs  user_component.rs  user_favorite.rs  user_information.rs  user_log.rs  user_resource.rs  work_order.rs
database-model/src/system/: cluster.rs  file_metadata.rs  file_storage.rs  flow_draft.rs  flow_instance.rs  flow_instance_billing.rs  mod.rs  net_disk.rs  node_instance.rs  node_instance_billing.rs  queue.rs  queue_bill_config.rs  storage_server.rs  user_resource.rs  user_webhook.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  schema.rs
migration/src/tables/: available_zone.rs  cluster.rs  dictionary.rs  dictionary_value.rs  file_metadata.rs  file_storage.rs  file_system.rs  file_transmit.rs  flow_draft.rs  flow_instance.rs  flow_instance_billing.rs  flow_template.rs  installed_software.rs  local_software_source.rs  mod.rs  node_draft_file.rs  node_instance.rs  node_instance_billing.rs  (+21 more)
(+6 files in other folders)
