[package]
name = "database-model"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies.sea-orm]
version = "0.12"
default-features = false
features = [
  "runtime-actix-rustls",
  "sqlx-postgres",
  "macros",
  "debug-print",
  "with-chrono",
  "with-json",
  "with-uuid",
  "with-rust_decimal",
]

[dev-dependencies]
uuid = { version = "*", features = ["v4"] }
chrono = "*"
